# a11y-devs-describer

./: .coveragerc  .env.example  .gitignore  README.md  agente-de-imagem.txt  agente-de-texto.txt  agente.md  analysis-suggestions.txt  arquitetura.md  install.bat  install.sh  plano.md  prompt.txt  pyproject.toml  relatorio-infra.txt  requirements.txt  run.py  sugestoes_melhoria.txt
agentes/: descritor-visual.md  mestre.md  ocr_agent.md  pipeline-executor.md  policies.md  pre-analise.md  router-ia.md  state-manager.md  tradutor.md
bot/: agente_mestre.py  main.py
config/: settings.py
core/: orchestrator.py  region_classifier.py  region_extractor.py  structurer.py
docs/: README.md  architecture.md  classes.md  constitution.md  correcao_bug_listas.txt  implementacao_auditoria.txt  melhoria-httpx-client-reutilizavel.txt  modules.md  patterns.md  tests.md  use_cases.md
exporters/: pandoc_exporter.py
filters/: __init__.py  pandoc_filters.py
pipeline/: canonical_builder.py  pandoc_ast_builder.py  sanitizer.py  structure_parser.py  validators.py  verbosity_manager.py
projeto-de-descricao/: resultados.txt
renderers/: __init__.py  docx_renderer.py  html_renderer.py  pdf_renderer.py  txt_renderer.py
scripts/: convert_img.py  corrigir_rapidocr.sh  corrigir_rapidocr_2026-06-10_16-55-54.txt  diagnostico_docling.sh  split_pdf.py  testar_docling.sh
tests/: test_agente_mestre.py  test_audit_validation.py  test_canonical_pipeline.py  test_exporters.py  test_integration.py  test_ollama_client.py  test_openrouter_client.py  test_pandoc_filters.py  test_pre_analise.py  (+9 more)
(+74 files in other folders)
