[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bot-acess"
version = "0.1.0"
description = "Bot de acessibilidade digital para conversão de documentos via IA"
authors = [
    { name = "Jhonata", email = "jhonata@example.com" }
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiogram>=3.12,<4.0",
    "Pillow>=10.0.0",
    "python-docx>=1.1.0",
    "reportlab>=4.1.0",
    "aiofiles>=24.0.0",
    "loguru>=0.7.2",
    "python-dotenv>=1.0.0",
    "httpx>=0.27.0",
    "pypdf>=4.0.0",
    "PyMuPDF>=1.24.0",
    "pytesseract>=0.3.10",
    "playwright>=1.40.0",
    "opencv-python>=4.9.0",
    "numpy>=1.26.0",
    "edge-tts>=7.2.0",
    "fastapi>=0.110.0",
    "uvicorn>=0.27.0",
    "python-multipart>=0.0.9",
    "jinja2>=3.1.3",
    "aiosmtplib>=3.0.1"
]

[project.optional-dependencies]
test = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "respx>=0.21.0",
    "pytest-cov>=5.0.0"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["bot*", "pipeline*", "exporters*", "filters*", "renderers*", "schemas*", "config*", "web*"]
